# post-quantum-wallet

./: .gitignore  .gitmodules  Cargo.toml  README.md
cli/: Cargo.toml
contracts/: foundry.toml
contracts/broadcast/DeployFactory.sol/11011/: run-1732111250.json  run-1732111265.json  run-1732111335.json  run-1732111432.json  run-1732111441.json  run-1732115968.json  run-1732173970.json  run-1732173984.json  run-1732174871.json  run-1732175026.json  run-1732175460.json  run-1732179708.json  run-1732180512.json  run-1732182753.json  run-1732184301.json  run-1732185038.json  run-1732185650.json  run-1732186204.json  run-1732191077.json  run-1732196919.json  run-1732197423.json  run-1732197704.json  run-1732197874.json  run-latest.json
contracts/broadcast/DeploySimpleAccountDemo.sol/11011/: run-1732204372.json  run-1732208838.json  run-1732210282.json  run-1732213820.json  run-1732214407.json  run-1732214443.json  run-1732214670.json  run-1732214800.json  run-1732217222.json  run-1732218163.json  run-1732220098.json  run-1732263949.json  run-1732265107.json  run-1732269990.json  run-1732271271.json  run-1732271549.json  run-1732272209.json
contracts/script/: DeployFactory.sol  DeploySimpleAccountDemo.sol
contracts/src/: ISimpleAccount.sol  ISimpleAccountDemo.sol  ISimpleAccountFactory.sol  ImageID.sol  SimpleAccount.sol  SimpleAccountDemo.sol  SimpleAccountFactory.sol
contracts/test/: Counter.t.sol  Elf.sol
core/: Cargo.toml
draft/app/src/: exconfig.ts
draft/app/src/pages/Background/services/: keyring.ts  types.ts
host/: Cargo.toml  proof-groth16.txt
host/src/: main.rs
methods/: Cargo.toml  build.rs
test/: Cargo.toml
test/src/: lib.rs
zkvm-cli/: Cargo.toml
zkvm-core/: Cargo.toml
zkvm-core/src/: lib.rs
zkvm-host/: Cargo.toml
zkvm-host/src/: main.rs
zkvm-methods/: Cargo.toml  README.md
zkvm-methods/guest/: Cargo.toml
zkvm-test/: Cargo.toml
zkvm-test/src/: lib.rs
zkvm/guest/: Cargo.toml
