[package]
name = "zkvm-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "publisher"
path = "src/bin/publisher_demo.rs"

[dependencies]
zkvm-methods = { path = "../zkvm-methods" }
alloy = { version = "0.4", features = ["full"] }
alloy-primitives = { version = "0.8.12", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = "0.8.12"
risc0-zkvm = "1.1.3"               # For zkVM proof generation
risc0-ethereum-contracts = "1.1.4"
tokio = { version = "1", features = ["full"] } # For async runtime
anyhow = "1.0"                    # For error handling
clap = { version = "4", features = ["derive"] } # For command-line parsing
url = "2.3"                       # For handling URLs
env_logger = "0.11.5"
ethers = "2.0.14"